Fixed container list overflow

--- a/wcfsetup/install/files/style/layout/containerList.scss
+++ b/wcfsetup/install/files/style/layout/containerList.scss
@@ -183,7 +183,8 @@
 			flex-wrap: wrap;
 			
 			> li {
-				overflow: hidden;
+				// this will cause the mobile drop-down menu to be cut-off
+				// overflow: hidden;
 				padding-right: 15px;
 				
 				.containerBoxContent {
